# ergonames-services

./: .gitignore  License  README.md  docker-compose.yml
api/: Dockerfile  README.md  index.ts  package-lock.json  package.json
api-rs/: Cargo.toml
api-rs/src/: main.rs
api-rs/src/endpoints/: api_info.rs  default.rs  mod.rs  resolve_ergoname.rs  root.rs
api-rs/src/types/: api_info.rs  available_response.rs  ergoname.rs  invalid_response.rs  mod.rs  resolve_response.rs
api-rs/src/utils/: database.rs  ergoname.rs  mod.rs
dashboard/: package-lock.json
dashboard/app/: page.tsx
dashboard/components/: navbar.tsx
dashboard/pages/api/: LatestRegistrations.ts
dashboard/types/: ApiInfo.ts  Registration.ts
dashboard/utils/: const.ts  endpoints.ts  string.ts
docs/: resolution-architecture.md
indexer/: .gitignore  Dockerfile  README.md  bun.lockb  config.template.json  index.ts  package-lock.json  package.json
indexer/types/: RegistrationInformation.ts  RegistryCreationInformation.ts
indexer/utils/: database.ts  decode.ts  endpoints.ts
sdk/: INTEGRATION.md  LICENSE  PITCH_NAUTILUS.md  README.md  package-lock.json  package.json  smoke.ts  tsconfig.json
sdk/src/: chain.ts  index.ts
