[package]
name = "ergonames-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
actix-web = "4.5.1"
regex = "1.10.3"
tokio-postgres = "0.7.10"
anyhow = "1.0.81"
